ubuntu/22.04/p/py/python2.7-minimal/2.7.18-13ubuntu1.1/eafac680-ff0e-4b39-b3db-06b19cc166fc/_usr_bin_python2.7.strace.stderr
  File "<stdin>", line 1
    /usr/bin/python2.7
    ^
SyntaxError: invalid syntax
